--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
-app.id=com.mygdx.game
-app.mainclass=com.mygdx.game.IOSLauncher
+app.id=com.godworm.game
+app.mainclass=com.godworm.game.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
 app.name=my-gdx-game
